@@ -13,6 +13,8 @@ Revision history for Test-BrewBuild
         - fix issue in t_bugs/164_dispatch_show_help_on_bad_args.t where we
           were reading the config file causing failure. Now we just move it out
           of the way temporarily to confirm the bug was fixed correctly
+        - changed the logic of Dispatch when in auto mode so that LCD warnings
+          are thrown at the correct time
 
 2.19    2017-08-05
         - added 'status' command to bbtester, prints to STDOUT whether a tester
